<resources>
    <string name="app_name">Material Calculator</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="settings_icon">⚙️</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="clear">AC</string>
    <string name="negate">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="settings">Settings</string>
    <string name="settings_back">Back Button</string>
    <string name="themes">Themes</string>
    <string name="lightPurple">Light Purple</string>
    <string name="darkPurple">Dark Purple</string>
    <string name="lightNormal">Light Normal</string>
    <string name="darkNormal">Dark Normal</string>
    <string name="lightRed">Light Red</string>
    <string name="darkRed">Dark Red</string>
</resources>